# boxwine-rs

./: Cargo.toml  README.md
src/: config.rs  create.rs  info_plist.rs  init.rs  main.rs
src/files/: info_plist.rs  launch.rs  mod.rs
