[package]
name = "boxwine"
version = "0.0.1"
authors = ["rishabh <7551150+rishabh@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
flate2 = "1.0.14"
tar = "0.4.28"
clap = "3.0.0-beta.1"
ureq = "1.1.2"
yaml-rust = "0.4.4"
