[package]
name = "boxwine"
version = "0.0.1"
authors = ["rishabh <7551150+rishabh@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
clap = "3.0.0-beta.1"
fs_extra = "1.1.0"
tar = "0.4.28"
toml = "0.5.6"
ureq = "1.1.2"

[dependencies.serde]
version = "1.0"
features = ["derive"]